--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # VITE_API='https://nitsmunapi-2024-25.onrender.com'
-VITE_API='https://nitsmunapi-2024-25.onrender.com'
+VITE_API='http://localhost:4000'
 VITE_MOD1="barnilsarma@gmail.com"
 VITE_MOD2="nitsmun@nits.ac.in"
 VITE_APIKEY= "AIzaSyA04JoimDvgpySY5J7rwCtloh-hKopUzfo"
